syntax = "proto3";

package chat;

message ChatMessage {
  int32 sender = 1;
  int32 receiver = 2;
  string message = 3;
}

service Chat {
  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);
} 